--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "dependencies": {
     "@angular/animations": "6.1.10",
     "@angular/common": "6.1.10",
-    "@angular/compiler": "6.1.10",
     "@angular/core": "6.1.10",
     "@angular/forms": "6.1.10",
     "@angular/http": "6.1.10",
@@ -56,15 +55,18 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "~7.0.0",
-    "@ngtools/webpack": "~7.0.0",
+    "@angular/compiler": "^9.0.1",
+    "@angular/compiler-cli": "^9.0.1",
+    "@ngtools/webpack": "^9.0.2",
+    "ajv": "^6.11.0",
     "babel-traverse": "6.26.0",
     "babel-types": "6.26.0",
     "babylon": "6.18.0",
     "lazy": "1.0.11",
     "nativescript-dev-typescript": "0.7.2",
-    "nativescript-dev-webpack": "^0.18.0",
+    "nativescript-dev-webpack": "^1.5.0",
     "tns-platform-declarations": "4.2.0",
+    "tslib": "^1.10.0",
     "typescript": "^3.7.5"
   },
   "author": "A. B."
