--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "lazy": "1.0.11",
     "nativescript-dev-typescript": "0.7.2",
     "nativescript-dev-webpack": "^1.5.0",
+    "serialize-javascript": "^3.0.0",
     "tns-platform-declarations": "4.2.0",
     "tslib": "^1.10.0",
     "typescript": "^3.7.5"
